feat: add development device GraphQL API
